; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_hxxx_helper.c_helper_check_sei_au.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_hxxx_helper.c_helper_check_sei_au.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hxxx_helper = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@HEVC_NAL_IRAP_VCL23 = common dso_local global i64 0, align 8
@HEVC_NAL_PREF_SEI = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hxxx_helper*, i64)* @helper_check_sei_au to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @helper_check_sei_au(%struct.hxxx_helper* %0, i64 %1) #0 {
  %3 = alloca %struct.hxxx_helper*, align 8
  %4 = alloca i64, align 8
  store %struct.hxxx_helper* %0, %struct.hxxx_helper** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @HEVC_NAL_IRAP_VCL23, align 8
  %7 = icmp sle i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load %struct.hxxx_helper*, %struct.hxxx_helper** %3, align 8
  %10 = getelementptr inbounds %struct.hxxx_helper, %struct.hxxx_helper* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @HEVC_NAL_PREF_SEI, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %26, label %15

15:                                               ; preds = %8, %2
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @HEVC_NAL_PREF_SEI, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %29

19:                                               ; preds = %15
  %20 = load %struct.hxxx_helper*, %struct.hxxx_helper** %3, align 8
  %21 = getelementptr inbounds %struct.hxxx_helper, %struct.hxxx_helper* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @HEVC_NAL_PREF_SEI, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %19, %8
  %27 = load %struct.hxxx_helper*, %struct.hxxx_helper** %3, align 8
  %28 = call i32 @helper_clear_sei(%struct.hxxx_helper* %27)
  br label %29

29:                                               ; preds = %26, %19, %15
  %30 = load i64, i64* %4, align 8
  %31 = load %struct.hxxx_helper*, %struct.hxxx_helper** %3, align 8
  %32 = getelementptr inbounds %struct.hxxx_helper, %struct.hxxx_helper* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i64 %30, i64* %33, align 8
  ret void
}

declare dso_local i32 @helper_clear_sei(%struct.hxxx_helper*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
